infra/envoy-gateway/config/http-https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-https-redirect
  namespace: envoy-gateway
spec:
  parentRefs:
    - name: envoy-gateway
      sectionName: web
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
